# Aristotel-GPT

./: .gitignore  Makefile  README.md  main.py  merges.txt  pyproject.toml  requirements.txt  special_tokens_map.json  start_traininig.py  test.py  tokenizer_config.json  training.py  vocab.json
.github/workflows/: cd.yml  ci.yml  model-training.yml
aristotle_model/checkpoint-10810/: config.json  generation_config.json
configs/: inference_config.yaml  training_config.yaml
docker/: Dockerfile.inference  Dockerfile.training  docker-compose.yml
requirements/: base.txt  inference.txt  training.txt
scripts/: deploy.py  model_evaluation.py  train.py
src/: __init__.py
src/inference/: __init__.py  api.py  predictor.py
src/training/: __init__.py  augmenter.py  trainer.py  utils.py
tests/: test_api.py  test_inference.py  test_training.py
timofey_code/: gpt.py
